--- a/proba/assets/css/style.scss
+++ b/proba/assets/css/style.scss
@@ -4,7 +4,7 @@
 }
  header{
     width: 100%;
-    background-color: yellow;
+    background-color: green;
     #center{
         background-color: blue;
         width: 80%;
