--- a/proba/assets/css/style.scss
+++ b/proba/assets/css/style.scss
@@ -4,9 +4,9 @@
 }
  header{
     width: 100%;
-    background-color: green;
+    background-color: orange;
     #center{
-        background-color: blue;
+        background-color: red;
         width: 80%;
         margin: 0px auto;
         display: flex;
