--- a/proba/assets/css/style.css
+++ b/proba/assets/css/style.css
@@ -8,7 +8,7 @@ header {
   background-color: gray;
 }
 header #center {
-  background-color: red;
+  background-color: green;
   width: 80%;
   margin: 0px auto;
   display: flex;
