--- a/proba/assets/css/style.scss
+++ b/proba/assets/css/style.scss
@@ -7,7 +7,7 @@
     background-color: gray;
  
     #center{
-        background-color: red;
+        background-color: green;
         width: 80%;
         margin: 0px auto;
         display: flex;
